# Y-Parabix

./: CMakeLists.txt  example.txt
QA/: .gitignore  greptest.py  greptest.xml  perf_stat_runner.py  proptest.xml
QA/Normalization/: NF-source  NFD  NFKC  NFKD  lv_t
QA/csv/TestFiles/: controls.csv  cornercases.csv  quoting  quoting.csv  us-covid.csv
QA/nfc/: test_nfc
QA/nfc/ExpectedOutput/: NF-source.nfc  lv_t.nfc  self_composable_test.nfc  x212b_323.nfc
QA/nfc/TestFiles/: self_composable_test
QA/nfd/: test_nfd
QA/nfd/ExpectedOutput/: ccc_tests1.nfd  lv_t.nfd  singletons.nfd  x212b_323.nfd
QA/nfd/TestFiles/: ccc_tests1  singletons  x212b_323
QA/u8u16/: u8u16_testgen.py
include/codegen/: CBuilder.h
include/csv/: csv_cmdline.h  csv_parser.h  csv_support.h
include/grep/: grep_engine.h  grep_kernel.h  grep_toolchain.h  nested_grep_engine.h
include/idisa/: idisa_arm_builder.h  idisa_builder.h
include/image/: bmp_io.h  bmp_loader.h  bmp_pipeline.h  conv_filter.h
include/json/: json_support.h
include/kernel/bitwise/: bixlogic.h  bixnum_kernel.h
include/kernel/core/: attributes.h  kernel.h  kernel_builder.h  kernel_compiler.h  streamset.h
include/kernel/io/: source_kernel.h
include/kernel/pipeline/: optimizationbranch.h  pipeline_builder.h  pipeline_kernel.h  pipeline_layer.h
include/kernel/re/: regexp_kernel.h
include/kernel/scan/: base.h
include/kernel/streamutils/: pdep_kernel.h  sentinel.h  sorting.h  stream_shift.h  string_insert.h  until_n.h
include/kernel/unicode/: UCD_property_kernel.h  char_replacement.h  charclasses.h  normalization.h  utf8_support.h
include/pablo/: pabloAST.h  pablo_intrinsic.h  pablo_kernel.h  pablo_toolchain.h
include/pablo/bixnum/: bixnum.h
include/re/adt/: re_assertion.h  re_cc.h  re_name.h  re_permute.h  re_seq.h
include/re/alphabet/: alphabet.h
include/re/analysis/: re_analysis.h  re_name_gather.h
include/re/cc/: GB_18030_data.h
include/re/compile/: re_compiler.h
include/re/parse/: parser.h
include/re/printer/: re_printer.h
include/re/toolchain/: toolchain.h
include/re/transforms/: assertion_transformations.h  expand_permutes.h  name_intro.h  name_lookaheads.h  regex_passes.h  remove_nullable.h  to_utf8.h
include/re/unicode/: boundaries.h  decomposition.h  equivalence.h  regex_passes.h  resolve_properties.h
include/testing/: macro.h
include/toolchain/: fileutil.h  toolchain.h
include/ucd/algo/: normalization.h
include/ucd/core/: unicode_set.h
include/ucd/data/: CaseFolding.h  Equivalence.h  PrecomposedMappings.h  PropertyObjectTable.h  PropertyObjects.h  PropertyValueAliases.h  RadicalSets.h
include/ucd/utf/: transchar.h  utf_compiler.h  utf_encoder.h
include/unicode/algo/: decomposition.h  normalization.h
include/unicode/core/: UCD_Config.h  unicode_set.h
include/unicode/data/: PrecomposedMappings.h  PropertyAliases.h  PropertyObjectTable.h  PropertyObjects.h  PropertyValueAliases.h
include/unicode/utf/: utf_compiler.h  utf_encoder.h
include/util/: not_null.h
lib/audio/: audio.cpp  stream_manipulation.cpp
lib/codegen/: CBuilder.cpp
lib/csv/: CMakeLists.txt  csv_cmdline.cpp  csv_parser.cpp  csv_support.cpp
lib/grep/: CMakeLists.txt  grep_engine.cpp  grep_kernel.cpp  grep_toolchain.cpp  nested_grep_engine.cpp
lib/idisa/: idisa_arm_builder.cpp  idisa_avx_builder.cpp  idisa_builder.cpp  idisa_sse_builder.cpp
lib/image/: CMakeLists.txt  bmp_io.cpp  bmp_loader.cpp  bmp_pipeline.cpp  conv_filter.cpp  conv_filter_common.h  conv_filter_default.cpp  conv_filter_frequency.cpp  conv_filter_low_rank.cpp  conv_filter_uniform.cpp
lib/json/: CMakeLists.txt  json_support.cpp
lib/kernel/bitwise/: CMakeLists.txt  bixlogic.cpp  bixnum_kernel.cpp
lib/kernel/core/: attributes.cpp  block_kernel.cpp  idisa_target.cpp  kernel.cpp  kernel_builder.cpp  kernel_compiler.cpp  multiblock_kernel.cpp  streamset.cpp
lib/kernel/illustrator/: illustrator.cpp
lib/kernel/io/: source_kernel.cpp  stdout_kernel.cpp
lib/kernel/pipeline/: CMakeLists.txt  pipeline_builder.cpp  pipeline_kernel.cpp  program_builder.cpp
lib/kernel/re/: CMakeLists.txt  regexp_kernel.cpp
lib/kernel/scan/: CMakeLists.txt  base.cpp  scanmatchgen.cpp
lib/kernel/streamutils/: CMakeLists.txt  deletion.cpp  pdep_kernel.cpp  sentinel.cpp  sorting.cpp  stream_shift.cpp  string_insert.cpp  until_n.cpp
lib/kernel/unicode/: CMakeLists.txt  UCD_property_kernel.cpp  boundary_kernels.cpp  char_replacement.cpp  charclasses.cpp  nfd.cpp  normalization-generated.cpp  normalization.cpp  utf16gen.cpp  utf8_support.cpp
lib/kernel/util/: radix64.cpp
lib/objcache/: object_cache.cpp
lib/pablo/: carry_manager.cpp  pablo_compiler.cpp  pablo_illustratorpass.cpp  pablo_kernel.cpp  pablo_simplifier.cpp  pablo_toolchain.cpp  passes.cpp  printer_pablos.cpp
lib/re/adt/: re_re.cpp  (+3 more)
lib/toolchain/: CMakeLists.txt  fileutil.cpp  toolchain.cpp
scripts/UCD/: UCD_config.py  UCD_equivalence.py  UCD_parser.py  UCD_properties.py  UCD_property_objects.py  UCD_tests.py  Unihan_parser.py  graphemebreak.py  nfc_generator.py  unicode_set.py
tests/: CMakeLists.txt  bmp_loader_tests.cpp  test_bit_movement.cpp  test_bitwise_kernels.cpp  test_bytefilterandspread.cpp  test_conv_filter.cpp  test_repeatingstreamset.cpp  test_truncatedstreamset.cpp
tools/audio/: CMakeLists.txt
tools/csv/: CMakeLists.txt  csv2json.cpp  csv_column.cpp  csv_util.hpp  csvcut.cpp  csvgrep.cpp
tools/editd/: editd.cpp
tools/icgrep/: grep_interface.cpp  grep_interface.h  icgrep.cpp
tools/image/: CMakeLists.txt  README.md  bmp_demo.cpp  bmp_header_test.cpp
tools/json/: json.cpp
tools/lex/: CMakeLists.txt  tokenizer.cpp
tools/transcoders/: CMakeLists.txt  gb18030.cpp  hangul-nfc.cpp  hangul-nfd.cpp  nfc.cpp  nfd.cpp  nfkd.cpp  u32u16.cpp  u32u8.cpp  u8u16.cpp  x8u16.cpp  xch.cpp
tools/ustats/: ustats.cpp
tools/util/: CMakeLists.txt  hashdemo.cpp  hexlines.cpp  packdemo.cpp  ufilter.cpp
tools/wc/: CMakeLists.txt  gcount.cpp  ucount.cpp  wc.cpp
tools/xml/: xml.cpp
tools/ztf8/: matchprior.cpp  ztf-hash.cpp  ztf-logic.cpp  ztf-runs.cpp  ztf1.cpp
(+187 files in other folders)
